--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% extends "bootstrap/base.html" %}
 
 
-{% block title %}Flasky{% endblock %}
+{% block title %}pyBlog{% endblock %}
 
 {% block head %}
 {{ super() }}
@@ -28,7 +28,7 @@ data-toggle="collapse" data-target=".navbar-collapse">
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
-<a class="navbar-brand" href="/">Flasky</a>
+<a class="navbar-brand" href="/">pyBlog</a>
 </div>
 <div class="navbar-collapse collapse">
 <ul class="nav navbar-nav">
